--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Kuan's Site</title>
+  <title>BSO Audition</title>
 </head>
 <body>
-    <h1>This is Kuan's Site</h1>
+    <h1>BSO Audition</h1>
     <ul>
         <li>I play the Cello</li>
         <li>I am learning how to program</li>
     </ul>
+    <h2>Bartók Beethoven Beethoven Brahms Brahms Bruckner Debussy Mahler Mendelssohn Mozart Mozart Saint-Saёns Strauss Strauss Strauss Tchaikovsky Tchaikovsky Verdi Wagner
+III Sight Reading
+Concerto for Orchestra [Mvt. V: mm. 292-317]
+Symphony No. 5 [Mvt. II]
+Symphony No. 9 [Mvt. II: Beginning to A, Mvt. IV: Beginning to m. 92] Symphony No. 2 [Mvt. II: Beginning to m. 15]
+Symphony No. 3 [Mvt. III: Beginning to m. 39]
+Symphony No. 7 [Mvt. I: Beginning to m. 24]
+La Mer [Mvt. I: 2 before 9 to 6 after 9, top part only]
+Symphony No. 2 [Mvt. II: 7 after 5 to 1 before 6]
+Scherzo from A Midsummer Night’s Dream [C to D & N to O] Symphony No. 35 [Mvt. IV: mm. 134-181]
+Symphony No. 41 [Mvt. IV: mm. 94-157]
+Symphony No. 3 [Mvt. 1: T to 9 after T]
+Also Sprach Zarathustra [5 after 15 to 8 after 17]
+Don Juan [Beginning to 1 before C , R to T]
+Ein Heldenleben [Beginning to m. 49, 1 before 46 to 49]
+Symphony No. 4 [Mvt. II: m. 21 to A]
+Symphony No. 6 [Mvt. II: Beginning to m. 16]
+Requiem – Offertorio [Beginning to m. 28]
+Tristan and Isolde – Prelude [mm. 17-32, mm. 55-77] </h2>
 </body>
 </html>
